@@ -1,3 +1,7 @@
+2004-12-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* builtins.c: Fix comment typos.
+
 2004-12-04  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR middle-end/18730
